--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@vitejs/plugin-basic-ssl": "^1.1.0",
-    "gh-pages": "^6.1.0",
-    "vite-plugin-pwa": "^0.17.4"
+    "@vitejs/plugin-basic-ssl": "^2.0.1",
+    "gh-pages": "^6.1.0"
   },
   "devDependencies": {
     "firebase-tools": "^13.0.1",
-    "netlify-cli": "^17.0.0",
-    "vite": "^6.2.0"
+    "netlify-cli": "^23.10.0",
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^1.0.0-next.1"
   }
 }
